force-app/main/default/objects/Candidate__c/fields/Are_you_US_citizen__c.field-meta.xml
<CustomField>
    <fullName>Are_you_US_citizen__c</fullName>
    <label>Are you US citizen?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>