force-app/main/default/objects/Candidate__c/fields/Candidate_full_name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_full_name__c</fullName>
    <formula>First_Name__c +&apos; &apos;+  Last_Name__c+&apos; &apos;+ Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Detail</label>
    <type>Text</type>
</CustomField>