force-app/main/default/objects/Candidate__c/fields/Do_you_need_visa__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_visa__c</fullName>
    <formula>IF( ISPICKVAL( Are_you_US_citizen__c , &quot;Yes&quot;), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do you need visa?</label>
    <type>Checkbox</type>
</CustomField>