force-app/main/default/objects/Candidate__c/fields/How_many_miles__c.field-meta.xml
<CustomField>
    <fullName>How_many_miles__c</fullName>
    <label>How many miles?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>